# JCC-SEOUL-USER

./: .env.example  .gitignore  .python-version  AGENTS.md  Dockerfile  README-cloudflare-tunnel.md  ddns-route53.yml  docker-compose.prod.yml  docker-compose.yml  nginx-certbot.env  pyproject.toml  requirements.txt
.cursor/rules/: jcc-drf-api.mdc  jcc-seoul-django.mdc  jcc-xlsx-importers.mdc
.deploy/: ddns-route53.yml
.deploy/local/: env
.deploy/nginx/conf.d/: jcc-seoul.conf
.deploy/production/: env  gunicorn.py
.postgres-django/data/: postgresql.conf  postmaster.pid
.postgres-django/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
_test_rosters/2026/: 2026 예배 출석 명단.xlsx
app/: README.md  db.sqlite3  manage.py
app/attendance/: apps.py  tasks.py  tests.py  urls.py  views.py
app/attendance/admin/: __init__.py  attendance.py  grouping.py  parking.py  team_attendance.py  weekly.py
app/attendance/api/: urls.py  views.py
app/attendance/apis/: __init__.py  common.py  (+5 more)
app/config/: __init__.py  admin_app_list.py  admin_legacy_redirect.py  celery.py  middleware.py  openapi_hooks.py  settings.py  urls.py  views.py
app/counseling/: apps.py  tests.py  urls.py  views.py
app/docs/: DATA_XLSX.md  LOCAL_BOOTSTRAP.md  MIGRATION_RECOVERY.md
app/fixtures/: 2026 예배 출석 명단.xlsx  README.md
app/registry/: apps.py  signals.py  tests.py  urls.py  views.py
app/static/: README.md
app/templates/: README.md
app/users/: admin.py  apps.py  authentication.py  mixins.py  models.py  openapi_extensions.py  permissions.py  urls.py  validators.py  views.py
(+565 files in other folders)
