[project]
name = "jcc-seoul-user"
version = "0.1.0"
description = ""
authors = [
    {name = "김샬롬",email = "johnkdo2020@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.15,<4.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "social-auth-app-django (>=5.7.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "djangorestframework-camel-case (>=1.4.2,<2.0.0)",
    "django-subdomains2 (>=4.1.2,<5.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-celery-beat (>=2.9.0,<3.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-phonenumber-field (>=8.4.0,<9.0.0)",
    "phonenumbers (>=9.0.27,<10.0.0)",
    "django-filter (>=25.2,<26.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
